--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -1,3 +1,11 @@
+/* stylelint-disable property-no-unknown */
 :export {
-  bgColor: $bg-color;
+  sidebar-width: $sidebar-width;
+  navbar-height: $navbar-height;
+  tags-view-height: $tags-view-height;
+  menu-background: $menu-background;
+  menu-text: $menu-text;
+  menu-active-text: $menu-active-text;
+  menu-hover: $menu-hover;
 }
+/* stylelint-enable property-no-unknown */
